<resources>
    <string name="app_name">PractoCaller</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_enter_contact_details">PractoCaller</string>
    <string name="txt_name">Name</string>
    <string name="txt_number">Contact Number</string>
    <string name="txt_address">Address</string>
    <string name="chk_receiver_disable">Disable recieving practo contact info</string>
    <string name="chk_receiver_enable">Enable receiving practo contact info</string>
    <string name="btn_create">Create</string>
    <string name="btn_finish">Finish</string>
    <string name="txt_header">Please enter patient contact details</string>
    <string name="validate_empty_fields">Please fill name and contact number as they are mandatory</string>
    <string name="validate_phone_field">Please enter a valid 10 digit number</string>

</resources>